changes' is much more useful than 'misc edits' or 'code cleanup'.
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------

common/map.c: Properly fill in op->more for multipart objects in containers.
  Multipart objects in containers can happen for customised monsters in
  generator inventories. This happened on /darcap/raffle/raffle1_u3.
Arvid Norlander 2009-02-17

README: Update the README file somewhat. It mentioned CVS and various other
  outdated things.
Arvid Norlander 2009-02-16

This is another step towards Python 3.x support, however in this commit there
are mostly fixes for various bugs in the existing found when working on the
porting. Also this commit drops support for Python 2.3 and older. This support
was already broken (some code already used modern features).
---
plugins/cfpython/include/cfpython.h: We need more python-version dependant
  defines so rewrite the checks to be cleaner as well.
plugins/cfpython/include/cfpython_object.h: Add a variant of the EXISTCHECK()
  macro that also verifies that the type matches (to fix some crashes).
plugins/cfpython/include/cfpython_party_private.h,
  plugins/cfpython/include/cfpython_region_private.h,
  plugins/cfpython/include/cfpython_archetype_private.h: Fix the method calling
  conventions to match was actually being done in the code.
plugins/cfpython/include/cfpython_object_private.h,
  plugins/cfpython/include/cfpython_map_private.h,
  plugins/cfpython/cfpython_object.c, plugins/cfpython/cfpython_map.c: Fix out
  of date PyNumberMethods structs. Handle the int/long unification in Python 3
  as well. Change to calling convention METH_NOARGS when no arguments were